[metadata]
name = django-ads-manager
version = 0.1.0
description = A simple reusable ads manager app for django
long_description = file: README.markdown
url = https://github.com/weholt/django-ads-manager
author = Thomas Weholt
author_email = thomas@weholt.org
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.1

[flake8]
max-line-length = 160
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv, env, fixtures

[pycodestyle]
max-line-length = 160
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv, env

[isort]
line_length = 160
known_first_party = website,config
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[mypy]
python_version = 3.10
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
plugins = mypy_django_plugin.main, mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = config.settings.test

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[coverage:run]
include = poptune/*
omit = *migrations*, *tests*
plugins =
    django_coverage_plugin
